# p3Logging

./: LICENSE.md  MANIFEST.in  README.md  p3Logging.code-workspace  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.VSCodeCounter/2025-05-01_15-06-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/p3Logging/: __init__ copy.py  __init__.py  p3LogConfig.py  p3LogConstants.py  p3LogFormatters.py  p3LogInfo.py  p3LogUtils.py  p3logging_config.py  p3logging_constants.py  test.py
src/p3Logging/p3logging_configs/: queued-stderr-file-json.jsonc  stderr-file-json.jsonc  stdout-file.jsonc  stdout-only.jsonc
src/p3_temp/: __init__.py
src/p3logging/: __init__.py  p3logging_config.py  p3logging_constants.py  p3logging_formatters.py  p3logging_info.py  p3logging_utils.py
src/p3logging/p3logging_configs/: queued-stderr-file-json.jsonc  stderr-file-json.jsonc  stdout-file.jsonc  stdout-only.jsonc
tests/: test_p3LogConfig.py  test_p3LogInfo.py  test_p3LogUtils.py  test_p3logging_config.py  test_p3logging_info.py  test_p3logging_utils.py
tests/test_configs/: invalid-json.jsonc
