[project]
name = "p3logging"
dynamic = ["version"]
description = "A simple logging library for Python 3"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"
[project.urls]
Homepage = "https://github.com/ppainterpython/p3logging"
[toolsetuptools.package-data]
"p3logging" = ["p3logging_configs/*.jsonc"]
