[metadata]
name = p3logging
version = 0.1.0
author = Paul Painter
description = A simple logging library for Python 3, adding some capabilities to the standard logging library.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.13
install_requires =
    pyjson5
    python-dateutil
include_package_data = True
zip_safe = False

[options.include_package_data]
p3logging = p3logging_configs/*.jsonc

